--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  badges: ^2.0.2
+  rotated_corner_decoration: ^2.0.0
   getwidget: ^2.0.4
   flutter_test:
     sdk: flutter
