--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.16.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,9 +33,18 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
   intl: ^0.17.0
   http: ^0.13.4
+  flutter_bloc: ^8.0.1
+  pointycastle: ^3.6.0
+  basic_utils: ^4.2.2
+  package_info_plus: ^1.4.2
+  shared_preferences: ^2.0.15
+  encrypt: ^5.0.1
+  device_info_plus: ^3.2.3
+  otp_text_field: ^1.1.3
+  google_fonts: ^3.0.1
   flutter_localizations:
     sdk: flutter
 
