--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,16 +42,19 @@ dependencies:
   package_info_plus: ^1.4.2
   shared_preferences: ^2.0.15
   encrypt: ^5.0.1
+  pin_code_fields: ^7.4.0
+  flutter_html: ^2.2.1
   device_info_plus: ^3.2.3
   otp_text_field: ^1.1.3
   google_fonts: ^3.0.1
+  flutter_image_slideshow: ^0.1.2
   flutter_localizations:
     sdk: flutter
 
 dev_dependencies:
   badges: ^2.0.2
   rotated_corner_decoration: ^2.0.0
-  getwidget: ^2.0.4
+  getwidget: ^2.1.0
   flutter_test:
     sdk: flutter
 
