--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   device_info_plus: ^3.2.3
   otp_text_field: ^1.1.3
   google_fonts: ^3.0.1
+  dio: ^4.0.6
+  camera: 0.9.7+1
+  custom_switch: 0.0.1
+  youtube_player_flutter: ^8.1.0
   flutter_localizations:
     sdk: flutter
 
@@ -75,6 +79,7 @@ flutter:
   assets:
     - assets/
     - assets/photos/
+    - assets/icons/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
