--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,12 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  args: ^2.0.0
+  asn1lib: ^1.0.0
+  clock: ^1.1.0
+  collection: ^1.15.0
+  crypto: ^3.0.0
+
 dev_dependencies:
   badges: ^2.0.2
   rotated_corner_decoration: ^2.0.0
